Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116487

Surfacegraph does not exit picking when out of range

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.6.0 Beta4, 6.7.0 FF
    • 6.6
    • Graphs: 3D
    • None
    • d95850be7 (dev), ff16dfe33 (6.6)

      To reproduce in widgetgraphgallery:

      • choose surface graph
      • choose column or row and click on graph
      • change range to beyond picked position

        For Gerrit Dashboard: QTBUG-116487
        # Subject Branch Project Status CR V

            spouke Sakaria Pouke
            spouke Sakaria Pouke
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes