Exit picking and slice view when out of range

Fixes: QTBUG-116487
Change-Id: Ie3be3378440d14b02233fb957942dbcb5ba1d823
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit d95850be7e5e34af8e86e8fbecffddc8eee567d3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>